--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <body>
 
     <header>
-        <img src="banner.png" alt="The Great Mr Baines Game Show" class="header-banner">
+        <img src="banner.jpg" alt="The Great Mr Baines Game Show" class="header-banner">
         <div class="balance-display">$<span id="totalMoney">1000000</span></div>
         <div class="status-bar">
             <span>Allocated: <span id="allocatedDisplay">0</span></span>
@@ -252,4 +252,5 @@
 
     <script src="game.js"></script>
 </body>
+
 </html>
