--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <header>
-        <img src="banner.png" alt="The Great Mr Baines Game Show" class="header-banner">
+        <img src="banner.jpg" alt="The Great Mr Baines Game Show" class="header-banner">
         
         <div class="timer-container">
             <div class="timer-bar" id="timerBar"></div>
@@ -104,3 +104,4 @@
     </script>
 </body>
 </html>
+
